Bug 205756 - Copy and paste fails silently when pasting file back into the same folder
Summary: Copy and paste fails silently when pasting file back into the same folder
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Usability-Clipboard (other bugs)
Version First Reported In: 1.0.0
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-31 07:11 UTC by Michael G. Hansen
Modified: 2022-01-31 04:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael G. Hansen 2009-08-31 07:11:26 UTC
Version:           1.0.0-beta3 (using KDE 4.3.0)
OS:                Linux
Installed from:    Debian testing/unstable Packages

- go to an album, select a file, right-click->copy
- paste the file back into to the same album -> nothing happens

Expected behavior: pop up a rename/overwrite/abort dialog, just like when copying from one folder to another and a file already exists.
Comment 1 Marcel Wiesweg 2009-09-13 17:32:58 UTC
SVN commit 1022934 by mwiesweg:

For internal drag / paste events, handle copying of items to the same album:
If no copy operation is explicitly requested, ignore as before;
if this is done, start a copy operation. kdelibs will ask for new filenames.

BUG: 205756

 M  +3 -1      NEWS  
 M  +5 -1      digikam/digikamimageview.cpp  
 M  +66 -15    digikam/imagedragdrop.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1022934