For internal drag / paste events, handle copying of items to the same album: If no copy operation is explicitly requested, ignore as before; if this is done, start a copy operation. kdelibs will ask for new filenames.

BUG: 205756

svn path=/trunk/extragear/graphics/digikam/; revision=1022934